# fibre_walk_project_code

./: .gitignore  devenv.nix  fitting_ringdown.org  flake.nix  main.py  pyproject.toml
ringfit/: data.py  fit.py  plotting.py  utils.py
scripts/: first_test.py  parse_and_plot_scan.py  startup.ipy  transients_with_blackout.py  transients_without_amplification.py  weird_oscillations.py
scripts/experiments/: *python:main*  .#002_rabi_detuning_scan.py  .#007_generate_fake_analysis_data.py  000_single_loop_transmission.py  001_laplace_fft.py  002_rabi_detuning_scan.py  003_experimental_ringdown_fft.py  004_full_nm_walk_tests.py  005_mean_displacement_semi_analytic.py  006_test_new_analysis.py  007_generate_fake_analysis_data.py  008_analyze_11_07_transients.py  009_analyze_12_07_transients.py  011_dark_state.py  012_all_to_all.py  013_step_through.py
scripts/experiments/figs/: 001_decay_test.pdf.meta.yaml
scripts/ringdown_spectrum_analysis/: 001_first_exploration.py  002_analyze_small_peak.py  003_11_07_data_analysis.py  004_simulation_11_07.py  005_11_07_analysis_on_bath.py  test.py
scripts/ringdown_spectrum_analysis/figs/: 001_overview.pdf.meta.yaml  001_overview.yaml  002_small_peak.pdf.meta.yaml  003_11_07_analysis.pdf.meta.yaml  004_01_11_07_simulation.pdf.meta.yaml  004_02_11_07_simulation_only_a.pdf.meta.yaml  (+7 more)
scripts/simulations/: 001_full_system_rwa_analysis.py  002_calibration_demonstration.py
src/: plot_utils.py
src/rabifun/: analysis.py  plots.py  system.py  utilities.py
src/ringfit/: data.py  fit.py  plotting.py  utils.py
(+15 files in other folders)
