[tool.poetry]
name = "fitting-ringdown"
version = "0.1.0"
description = ""
authors = ["Valentin Boettcher <hiro@protagon.space>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.13.0"
click = "^8.1.7"
matplotlib = "^3.8.4"
networkx = "^3.3"


[tool.poetry.group.dev.dependencies]
ptpython = "^3.0.26"
ipython = "^8.24.0"
jupyter-console = "^6.6.3"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
